{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 2365,
  "lineage": "eab238d4-63be-9af6-fe6e-d570b3411548",
  "resources": [
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-034e11bab17c86d2c",
            "domain": "vpc",
            "id": "eipalloc-9a82e3bc",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0b6954f3400b5ec45",
            "private_dns": "ip-10-0-77-28.eu-central-1.compute.internal",
            "private_ip": "10.0.77.28",
            "public_dns": "ec2-3-66-69-109.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.69.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_elb",
      "name": "app_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:loadbalancer/app-elb-classic",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b",
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "internal-app-elb-classic-1435659115.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:3000",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "app-elb-classic",
            "idle_timeout": 60,
            "internal": true,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "tcp",
                "lb_port": 3000,
                "lb_protocol": "tcp"
              }
            ],
            "name": "app-elb-classic",
            "security_groups": [
              "sg-0a5b1c8e5b683bad5"
            ],
            "source_security_group": "694108144550/app",
            "source_security_group_id": "sg-0a5b1c8e5b683bad5",
            "subnets": [
              "subnet-023cc1ea75da10950",
              "subnet-06061a5d31020d2e7",
              "subnet-0d76c12f9ddae7801"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.network_stack.aws_security_group.app",
            "module.network_stack.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c1695e3dcdd191e",
            "arn": "arn:aws:ec2:eu-central-1:694108144550:instance/i-0ce2c34b0248a8c3a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce2c34b0248a8c3a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "masterkey-homelike",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0931756d6c5d644e0",
            "private_dns": "ip-10-0-76-34.eu-central-1.compute.internal",
            "private_ip": "10.0.76.34",
            "public_dns": "ec2-3-122-94-23.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.122.94.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd8afec7255296a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ab02c9db5314a0a",
            "tags": {
              "Env": "Prod",
              "Name": "ec2-ansible-server",
              "Owner": "HomeLike"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09ac6731c11d2729f"
            ]
          },
          "dependencies": [
            "module.network_stack.aws_key_pair.generated_key",
            "module.network_stack.aws_security_group.alb_nginx",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc",
            "module.network_stack.data.aws_ami.ubuntu",
            "module.network_stack.tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c1695e3dcdd191e",
            "arn": "arn:aws:ec2:eu-central-1:694108144550:instance/i-073a392562a7a95c1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-073a392562a7a95c1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "masterkey-homelike",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-006e0453d2b46a9f8"
              }
            ],
            "primary_network_interface_id": "eni-006e0453d2b46a9f8",
            "private_dns": "ip-10-0-48-5.eu-central-1.compute.internal",
            "private_ip": "10.0.48.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b149a8a9c39a33e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8c048fe13fbc4cc",
            "tags": {
              "Env": "Prod",
              "Name": "ec2-db1-leader",
              "Owner": "HomeLike",
              "Type": "DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08ea6cc6a39aa8031"
            ]
          },
          "dependencies": [
            "module.network_stack.aws_iam_instance_profile.resources_iam_profile",
            "module.network_stack.aws_iam_role.resources_iam_role",
            "module.network_stack.aws_key_pair.generated_key",
            "module.network_stack.aws_network_interface.db1nwinterface",
            "module.network_stack.aws_security_group.db",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc",
            "module.network_stack.data.aws_ami.ubuntu",
            "module.network_stack.tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c1695e3dcdd191e",
            "arn": "arn:aws:ec2:eu-central-1:694108144550:instance/i-05278abc261bc2848",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-05278abc261bc2848",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "masterkey-homelike",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0372650ed1a96dfbb"
              }
            ],
            "primary_network_interface_id": "eni-0372650ed1a96dfbb",
            "private_dns": "ip-10-0-56-5.eu-central-1.compute.internal",
            "private_ip": "10.0.56.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce72acb48b95e569",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ad4426ffe81d8e7",
            "tags": {
              "Env": "Prod",
              "Name": "ec2-db2-secondary",
              "Owner": "HomeLike",
              "Type": "DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08ea6cc6a39aa8031"
            ]
          },
          "dependencies": [
            "module.network_stack.aws_iam_instance_profile.resources_iam_profile",
            "module.network_stack.aws_iam_role.resources_iam_role",
            "module.network_stack.aws_key_pair.generated_key",
            "module.network_stack.aws_network_interface.db2nwinterface",
            "module.network_stack.aws_security_group.db",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc",
            "module.network_stack.data.aws_ami.ubuntu",
            "module.network_stack.tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c1695e3dcdd191e",
            "arn": "arn:aws:ec2:eu-central-1:694108144550:instance/i-079ba27ebe396a03c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-079ba27ebe396a03c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "masterkey-homelike",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02de2055a17d6385c"
              }
            ],
            "primary_network_interface_id": "eni-02de2055a17d6385c",
            "private_dns": "ip-10-0-64-5.eu-central-1.compute.internal",
            "private_ip": "10.0.64.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a40098af39e97b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0074b466e252ecaa9",
            "tags": {
              "Env": "Prod",
              "Name": "ec2-db3-arbiter",
              "Owner": "HomeLike",
              "Type": "DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08ea6cc6a39aa8031"
            ]
          },
          "dependencies": [
            "module.network_stack.aws_iam_instance_profile.resources_iam_profile",
            "module.network_stack.aws_iam_role.resources_iam_role",
            "module.network_stack.aws_key_pair.generated_key",
            "module.network_stack.aws_network_interface.db3nwinterface",
            "module.network_stack.aws_security_group.db",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc",
            "module.network_stack.data.aws_ami.ubuntu",
            "module.network_stack.tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpnserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c1695e3dcdd191e",
            "arn": "arn:aws:ec2:eu-central-1:694108144550:instance/i-0019a1f81047768f2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0019a1f81047768f2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "masterkey-homelike",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02458fa73917d1f94",
            "private_dns": "ip-10-0-97-49.eu-central-1.compute.internal",
            "private_ip": "10.0.97.49",
            "public_dns": "ec2-3-125-45-187.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.45.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d428725bc8fc0cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cc3a6635a97a2a0c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1b22302e3412ffa",
            "tags": {
              "Env": "Prod",
              "Name": "openvpn-server",
              "Owner": "HomeLike"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cc3a6635a97a2a0c"
            ]
          },
          "dependencies": [
            "module.network_stack.aws_key_pair.generated_key",
            "module.network_stack.aws_security_group.vpn",
            "module.network_stack.aws_subnet.vpn",
            "module.network_stack.aws_vpc.homelikevpc",
            "module.network_stack.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:internet-gateway/igw-06507976106a7b2cb",
            "id": "igw-06507976106a7b2cb",
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "igw-homelike",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:loadbalancer/app/alb-for-nginx/68593844f0f77f27",
            "arn_suffix": "app/alb-for-nginx/68593844f0f77f27",
            "dns_name": "alb-for-nginx-303406234.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:loadbalancer/app/alb-for-nginx/68593844f0f77f27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-for-nginx",
            "security_groups": [
              "sg-09ac6731c11d2729f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021a8d4938a7741e9"
              },
              {
                "subnet_id": "subnet-09ab02c9db5314a0a"
              },
              {
                "subnet_id": "subnet-0ab3af37ee98fc4dc"
              }
            ],
            "subnets": [
              "subnet-021a8d4938a7741e9",
              "subnet-09ab02c9db5314a0a",
              "subnet-0ab3af37ee98fc4dc"
            ],
            "vpc_id": "vpc-041f7d4470758a1aa",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.network_stack.aws_security_group.alb_nginx",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:listener/app/alb-for-nginx/68593844f0f77f27/c99f2f36650d9049",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:targetgroup/alb-target-for-nginx/fd05e7665ca99aa0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:listener/app/alb-for-nginx/68593844f0f77f27/c99f2f36650d9049",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:loadbalancer/app/alb-for-nginx/68593844f0f77f27",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.network_stack.aws_lb.alb_nginx",
            "module.network_stack.aws_lb_target_group.alb_target",
            "module.network_stack.aws_security_group.alb_nginx",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:targetgroup/alb-target-for-nginx/fd05e7665ca99aa0",
            "arn_suffix": "targetgroup/alb-target-for-nginx/fd05e7665ca99aa0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:694108144550:targetgroup/alb-target-for-nginx/fd05e7665ca99aa0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-for-nginx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-9a82e3bc",
            "id": "nat-0e448b06b366e0ab5",
            "network_interface_id": "eni-0b6954f3400b5ec45",
            "private_ip": "10.0.77.28",
            "public_ip": "3.66.69.109",
            "subnet_id": "subnet-09ab02c9db5314a0a"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db1nwinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0605417509000e7e6",
                "device_index": 0,
                "instance": "i-073a392562a7a95c1"
              }
            ],
            "id": "eni-006e0453d2b46a9f8",
            "ipv6_address_count": 0,
            "mac_address": "02:82:74:ed:ed:2e",
            "private_dns_name": "ip-10-0-48-5.eu-central-1.compute.internal",
            "private_ip": "10.0.48.5",
            "private_ips": [
              "10.0.48.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08ea6cc6a39aa8031"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8c048fe13fbc4cc",
            "tags": {
              "Env": "Prod",
              "Owner": "HomeLike"
            }
          },
          "dependencies": [
            "module.network_stack.aws_security_group.db",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db2nwinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0534caac457494415",
                "device_index": 0,
                "instance": "i-05278abc261bc2848"
              }
            ],
            "id": "eni-0372650ed1a96dfbb",
            "ipv6_address_count": 0,
            "mac_address": "06:09:b5:76:05:18",
            "private_dns_name": "ip-10-0-56-5.eu-central-1.compute.internal",
            "private_ip": "10.0.56.5",
            "private_ips": [
              "10.0.56.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08ea6cc6a39aa8031"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ad4426ffe81d8e7",
            "tags": {
              "Env": "Prod",
              "Owner": "HomeLike"
            }
          },
          "dependencies": [
            "module.network_stack.aws_security_group.db",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db3nwinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a88b5223b5ed7140",
                "device_index": 0,
                "instance": "i-079ba27ebe396a03c"
              }
            ],
            "id": "eni-02de2055a17d6385c",
            "ipv6_address_count": 0,
            "mac_address": "0a:e3:50:d3:62:2a",
            "private_dns_name": "ip-10-0-64-5.eu-central-1.compute.internal",
            "private_ip": "10.0.64.5",
            "private_ips": [
              "10.0.64.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08ea6cc6a39aa8031"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0074b466e252ecaa9",
            "tags": {
              "Env": "Prod",
              "Owner": "HomeLike"
            }
          },
          "dependencies": [
            "module.network_stack.aws_security_group.db",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b1b57588a2c424b9",
            "owner_id": "694108144550",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06507976106a7b2cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Prod",
              "Name": "rt-homelike-internet",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_internet_gateway.igw",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b8b7628ad3049458",
            "owner_id": "694108144550",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e448b06b366e0ab5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Prod",
              "Name": "rt-homelike-natgw",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081067bb9250184af",
            "route_table_id": "rtb-0b1b57588a2c424b9",
            "subnet_id": "subnet-09ab02c9db5314a0a"
          },
          "dependencies": [
            "module.network_stack.aws_internet_gateway.igw",
            "module.network_stack.aws_route_table.route_table",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04edea073f7a056fa",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-0b8c048fe13fbc4cc"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ff2c928150164a2",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-01ad4426ffe81d8e7"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085324cd9b794a4b6",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-0074b466e252ecaa9"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.db",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c78c4cd412968c8",
            "route_table_id": "rtb-0b1b57588a2c424b9",
            "subnet_id": "subnet-021a8d4938a7741e9"
          },
          "dependencies": [
            "module.network_stack.aws_internet_gateway.igw",
            "module.network_stack.aws_route_table.route_table",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfd0435b71fbfbf1",
            "route_table_id": "rtb-0b1b57588a2c424b9",
            "subnet_id": "subnet-0ab3af37ee98fc4dc"
          },
          "dependencies": [
            "module.network_stack.aws_internet_gateway.igw",
            "module.network_stack.aws_route_table.route_table",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7c4c265aab7e8b7",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-0b4dd5fdc8fb86d1c"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.nginx",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0531a0490b29d5db2",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-0221992316f02af88"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.nginx",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00441cfb710eab794",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-082844708d69fef40"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.nginx",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28ae4738645fcd0",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-0d76c12f9ddae7801"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.app",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0909f8ac1a20c5de3",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-06061a5d31020d2e7"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.app",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efc81f87c5ea8a9c",
            "route_table_id": "rtb-0b8b7628ad3049458",
            "subnet_id": "subnet-023cc1ea75da10950"
          },
          "dependencies": [
            "module.network_stack.aws_eip.nat",
            "module.network_stack.aws_nat_gateway.gw",
            "module.network_stack.aws_route_table.route_table_nat",
            "module.network_stack.aws_subnet.alb",
            "module.network_stack.aws_subnet.app",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007045f30d629c9ff",
            "route_table_id": "rtb-0b1b57588a2c424b9",
            "subnet_id": "subnet-0f1b22302e3412ffa"
          },
          "dependencies": [
            "module.network_stack.aws_internet_gateway.igw",
            "module.network_stack.aws_route_table.route_table",
            "module.network_stack.aws_subnet.vpn",
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:security-group/sg-09ac6731c11d2729f",
            "description": "HTTP from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ac6731c11d2729f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alb_nginx",
            "name_prefix": "",
            "owner_id": "694108144550",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:security-group/sg-0a5b1c8e5b683bad5",
            "description": "app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5b1c8e5b683bad5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/21",
                  "10.0.8.0/21",
                  "10.0.16.0/21"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.72.0/21",
                  "10.0.80.0/21",
                  "10.0.88.0/21"
                ],
                "description": "SSH from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app",
            "name_prefix": "",
            "owner_id": "694108144550",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:security-group/sg-08ea6cc6a39aa8031",
            "description": "db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ea6cc6a39aa8031",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.24.0/21",
                  "10.0.32.0/21",
                  "10.0.40.0/21"
                ],
                "description": "HTTP from Internet",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.0.72.0/21",
                  "10.0.80.0/21",
                  "10.0.88.0/21"
                ],
                "description": "SSH from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "694108144550",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:security-group/sg-0be326016e248586d",
            "description": "HTTP from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be326016e248586d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.72.0/21",
                  "10.0.80.0/21",
                  "10.0.88.0/21"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.72.0/21",
                  "10.0.80.0/21",
                  "10.0.88.0/21"
                ],
                "description": "SSH from Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx",
            "name_prefix": "",
            "owner_id": "694108144550",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:security-group/sg-0cc3a6635a97a2a0c",
            "description": "OPENVPN SEC GRP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc3a6635a97a2a0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Office",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "OPENVPN from Office",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "OPENVPN from Office",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Office",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpn",
            "name_prefix": "",
            "owner_id": "694108144550",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-alb1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-09ab02c9db5314a0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.72.0/21",
            "id": "subnet-09ab02c9db5314a0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-alb1",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-alb1",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-alb2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-021a8d4938a7741e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.80.0/21",
            "id": "subnet-021a8d4938a7741e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-alb2",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-alb2",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-alb3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0ab3af37ee98fc4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.88.0/21",
            "id": "subnet-0ab3af37ee98fc4dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-alb3",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-alb3",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-app1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0d76c12f9ddae7801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.24.0/21",
            "id": "subnet-0d76c12f9ddae7801",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-app1",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-app1",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-app2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-06061a5d31020d2e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/21",
            "id": "subnet-06061a5d31020d2e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-app2",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-app2",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-app3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-023cc1ea75da10950",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.40.0/21",
            "id": "subnet-023cc1ea75da10950",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-app3",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-app3",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-db1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0b8c048fe13fbc4cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.48.0/21",
            "id": "subnet-0b8c048fe13fbc4cc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-db1",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-db1",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-db2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-01ad4426ffe81d8e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.56.0/21",
            "id": "subnet-01ad4426ffe81d8e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-db2",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-db2",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-db3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0074b466e252ecaa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.64.0/21",
            "id": "subnet-0074b466e252ecaa9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-db3",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-db3",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-nginx1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0b4dd5fdc8fb86d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/21",
            "id": "subnet-0b4dd5fdc8fb86d1c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-nginx1",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-nginx1",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-nginx2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0221992316f02af88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.8.0/21",
            "id": "subnet-0221992316f02af88",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-nginx2",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-nginx2",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        },
        {
          "index_key": "subnet-nginx3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-082844708d69fef40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.16.0/21",
            "id": "subnet-082844708d69fef40",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "subnet-nginx3",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "subnet-nginx3",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpn",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:subnet/subnet-0f1b22302e3412ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.96.0/21",
            "id": "subnet-0f1b22302e3412ffa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "vpn",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "vpn",
              "Owner": "HomeLike"
            },
            "vpc_id": "vpc-041f7d4470758a1aa"
          },
          "dependencies": [
            "module.network_stack.aws_vpc.homelikevpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_stack",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "homelikevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:694108144550:vpc/vpc-041f7d4470758a1aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0380a8499197dafb8",
            "default_route_table_id": "rtb-0d5d60e05c36d0f4e",
            "default_security_group_id": "sg-010d477ff505c544a",
            "dhcp_options_id": "dopt-e5de558f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-041f7d4470758a1aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5d60e05c36d0f4e",
            "owner_id": "694108144550",
            "tags": {
              "Env": "Prod",
              "Name": "vpc-homelike",
              "Owner": "HomeLike"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "vpc-homelike",
              "Owner": "HomeLike"
            }
          }
        }
      ]
    }
  ]
}